2006-??-?? : 1.5
	sqlite : added BOOL handling
	jit : added mmap support (for execution protection)
	jit : fixed bug when unsupported operation exception
	vm : fixed bug in debug infos reading when nfiles > 255
	(TODO) continuations

2006-08-02 : 1.4
	std : added a SO_REUSEADDR before socket_bind (except windows)
	nekoc/nekovm : allowed more than 127 filenames in debug infos
	nekotools server : added -rewrite for mod_rewrite'style urls
	added zlib wrapper
	mod_neko for apache 2.0
	added sqlite wrapper
	std : fixed socket_set_timeout (changed unit from millisec to seconds)
	std : fixed math_pow (integer overflow) , fixed readdir (missing closedir on Linux)
	added PPC registers
	neko.h : added NEKO_* OS/CPU flags
	added JIT for x86
	vm : (int mod 0) is now an exception (and not NaN)
	neko.h : added kind_import and kind_export to share abstracts between libraries
	std : handle signals in socket send and recv
	allowed OSX universal build
	added $setresolver for unknown object field handling

2006-05-11 : 1.3
	neko : fixed endianness bug needed to boot, exported neko_is_big_endian
	neko : fixed bug on Linux x86 gcc with object operators (eax get overwritten)
	neko : fixed bug : error when __string or __compare does not exist
	neko : allowed runtime printer redirection (+ added std@print_redirect)
	neko : defined a default NEKOPATH when not specified (less configuration)
	neko : fixed int32 calculus bug (need_32_bits macro)
	neko : fixed calls with a lot of arguments (some cases were failing)
	neko : fixed preservation of 'this' through tailcall, if changed inside the call
	neko : added unary operator minus parsing
	neko : fixed error reporting of unclosed parenthesis
	nekoml : added Net core module for sockets
	nekoml : when catching Neko errors, wrap them using Neko_error constructor
	std : supported serialization of C primitives and __serialize/__unserialize overrides
	added nekotools (merged nekoboot and neko webserver)
	std : fixed math_round, fixed math docs